[package]
name = "power-assert"
version = "0.4.0"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/gifnksm/power-assert-rs"
description = "Power Assert in Rust. Provides better assertion message."

[lib]
name = "power_assert"
proc-macro = true

[[examples]]
name = "override_builtins"
required-features = ["override_builtins"]

[dependencies]
syn = { version = "0.15", features = ["full", "fold", "extra-traits"] }
quote = "0.6"
proc-macro2 = { version = "0.4", features = ["nightly"] }

[features]
override_builtins = []